<package>
  <name>mas_qt_tablet_interface</name>
  <version>1.0.0</version>
  <description>Interface for sending commands from the QT tablets to another robot</description>
  <license>GPLv3</license>

  <maintainer email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

  <test_depend>roslaunch</test_depend>
</package>
